Resolves several small formatting issues (#116)
* Removes 'agile' topic & fixes license in 'pizza' demo

* Removes 'agile' category

* Removes 'agile' category

* Capitalizes 'Enterprise' in extn card flag

Resolves #114

* api-integration -> integration & removes multi-type instruct

* Make default page.type 'plugin'

* Fix extn type case & remove redundant listing

* Truncates support link text at 15 chars for safety

* Re-pad the integration explainer

--- a/app/_assets/css/catalog.css
+++ b/app/_assets/css/catalog.css
@@ -15753,7 +15753,7 @@ header.page-header {
 .plugin-card.enterprise:after {
     position: absolute;
     display: block;
-    content: 'enterprise';
+    content: 'Enterprise';
     top: 0;
     right: -20px;
     height: 1.7rem;
